# ft_p

./: .gitignore  CMakeLists.txt  Makefile
client_src/: Makefile
client_src/includes/: client.h
client_src/srcs/: main.c
server_src/: Makefile
server_src/includes/: server.h
server_src/srcs/: config.c  error.c  event.c  main.c  send.c  util.c
